# PiPiName

./: .gitignore  0_默认_names.txt  2_楚辞_names.txt  3_论语_names.txt  4_周易_names.txt  5_唐诗_names.txt  6_宋诗_names.txt  7_宋词_names.txt  config.py  pyproject.toml
