[tool.poetry]
name = "pipiname"
version = "1.0.0"
description = ""
authors = ["toddlerya <toddlerya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
opencc-python-reimplemented = "^0.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
